# research-learning-agent

./: .env.example  .gitignore  README.md  pyproject.toml
data/: intent_events.jsonl
docs/: architecture.md  daily-notes.md  day2-eval.md  day3-eval.md  day4 (tool integration)-eval.md  day5 (pedagogy)-eval.md  intent_classifier.md  intent_regression.md  modes.md  testing.md  tools.md
src/research_learning_agent/: __init__.py  app_cli.py  config.py  generator.py  intent_classifier.py  llm_client.py  logging_utils.py  memory.py  orchestrator.py  pedagogy.py  planner.py  prompts.py  schemas.py  simple_agent.py  storage.py  telemetry.py  tool_executor.py  tool_registry.py  user_profile.py
src/research_learning_agent/docs/: daily-notes.md
src/research_learning_agent/scripts/: intent_regression.py  intent_stats.py
src/research_learning_agent/store/: memory_store.py
src/research_learning_agent/tools/: base.py  ddg_instant_answer.py  http.py  serper_web.py  youtube_data_api.py
src/research_learning_agent/utils/: json_extract.py
tests/fixtures/: intent_cases.json
tests/results/intent_regression_runs/: intent_run_20260101_141322.jsonl  intent_run_20260101_141322_summary.json
tests/tools/: test_ddg_instant_answer.py  test_generator_sections_parsing.py  test_http.py  test_orchestrator_pedagogy_integration.py  test_orchestrator_tool_flow.py  test_pedagogy.py  test_schemas_learning_modes.py  test_serper_web.py  test_tool_executor.py  test_tool_registry_web_fallback.py  test_youtube_data_api.py
tests/utils/: test_json_extract.py
(+2 files in other folders)
